[gd_scene load_steps=6 format=3 uid="uid://c272kclcw4p8a"]

[ext_resource type="PackedScene" uid="uid://c8meqgfjw42c3" path="res://Game/Bosses/boss_template.tscn" id="1_8vb4e"]
[ext_resource type="Script" path="res://Game/Bosses/pirate_boss.gd" id="2_1aogg"]
[ext_resource type="Texture2D" uid="uid://dh4osjtmynxra" path="res://Assets/Img/Enemies/Pirate_Boss.png" id="2_maau3"]
[ext_resource type="PackedScene" uid="uid://untxh8qat57p" path="res://Game/exhaust.tscn" id="5_0itjn"]
[ext_resource type="PackedScene" uid="uid://q1udfypxoe7n" path="res://Game/Bosses/normal_gun_controller.tscn" id="6_srip3"]

[node name="PirateBoss" instance=ExtResource("1_8vb4e")]
script = ExtResource("2_1aogg")
hp = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox" index="0"]
polygon = PackedVector2Array(-11, -46, -16, -46, -22, -38, -11, -11, -23, -11, -23, -7, -27, -7, -36, -2, -36, 2, -27, 7, -23, 7, -23, 11, -11, 11, -22, 38, -16, 46, -11, 46, 7, 11, 15, 11, 24, 20, 33, 18, 33, -18, 24, -20, 15, -11, 7, -11)

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
rotation = 1.5708
texture = ExtResource("2_maau3")

[node name="Exhaust" parent="Sprite2D" index="0" instance=ExtResource("5_0itjn")]
position = Vector2(0, -34)
rotation = 1.5708
scale = Vector2(1, 1.5)

[node name="NormalGunController" parent="." index="2" instance=ExtResource("6_srip3")]
position = Vector2(-29, -29)

[node name="NormalGunController2" parent="." index="3" instance=ExtResource("6_srip3")]
position = Vector2(-25, -20)

[node name="NormalGunController3" parent="." index="4" instance=ExtResource("6_srip3")]
position = Vector2(-25, 19)

[node name="NormalGunController4" parent="." index="5" instance=ExtResource("6_srip3")]
position = Vector2(-29, 28)
